add employee id params and update response information in swagger
